<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayScreen"
    android:background="@color/turquoise"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tic_tac_toe_grid"
        android:src="@drawable/ttt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="235dp"
        android:layout_height="77dp"
        android:gravity="center"
        android:text="@string/epic_tic_tac_toe"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/play_again_btn"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:layout_marginBottom="92dp"
        android:text="@string/reset"
        android:background="@drawable/border_style_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:text="@string/exit"
        android:background="@drawable/border_style_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=   "0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

<!-- Row 1: Box(0, 0)-->
    <Button
        android:id="@+id/box_0_0"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:layout_constraintHorizontal_bias="0.01"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <!-- Row 1 Box(0, 1)-->
    <Button
        android:id="@+id/box_0_1"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:layout_constraintHorizontal_bias="0.499"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <!-- Row 1: Box(0, 2)-->
    <Button
        android:id="@+id/box_0_2"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:layout_constraintHorizontal_bias="0.99"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white" />

    <!-- Row 2: Box(1, 0)-->
    <Button
        android:id="@+id/box_1_0"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.01"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <!-- Row 2: Box(1, 1)-->
    <Button
        android:id="@+id/box_1_1"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.51"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <!-- Row 2: Box(1, 2)-->
    <Button
        android:id="@+id/box_1_2"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.98"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <!-- Row 3: Box(2, 0) -->
    <Button
        android:id="@+id/box_2_0"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.73"
        app:layout_constraintHorizontal_bias="0.01"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white" />

    <!-- Row 3: Box(2, 1) -->
    <Button
        android:id="@+id/box_2_1"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.73"
        app:layout_constraintHorizontal_bias="0.511"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <!-- Row 3: Box(2, 2) -->
    <Button
        android:id="@+id/box_2_2"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.73"
        app:layout_constraintHorizontal_bias="0.98"
        android:background="@android:color/transparent"
        android:text=""
        android:textSize="40sp"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>